Task View Modal UI Modified

--- a/index.html
+++ b/index.html
@@ -850,58 +850,39 @@
             <div class="card">
               <div class="card-body">
                 <h3>
-                  Title:
                   <small class="text-body-secondary"
                     >Check All Task Properly</small
                   >
                 </h3>
-                <!-- <h5 class="card-title">Title: Check All Task Properly</h5> -->
-                <p class="card-text">
-                  All Pending Tasks Should be Checked fast and Properly. Try to
-                  understand the Solution of Each problem thoroughly.
-                </p>
-                <div class="row">
-                  <div class="col-4">
-                    <h6 class="card-subtitle mb-2 text-body-secondary">
-                      <div>Task Progress:</div>
-                    </h6>
-                  </div>
-                  <div class="col-8">
-                    <div
-                      class="progress"
-                      role="progressbar"
-                      aria-label="Success example"
-                      aria-valuenow="100"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                    >
-                      <div
-                        class="progress-bar progress-bar-striped bg-success"
-                        style="width: 100%"
-                      >
-                        100%
-                      </div>
-                    </div>
-                  </div>
-                </div>
                 <h6 class="card-subtitle my-2 text-body-secondary">
                   This Task is Assigned to
                   <span class="text-info">
                     <strong> Ben Smith </strong>
                   </span>
                 </h6>
-                <div class="row">
+                <p class="card-text">
+                  <strong>Task Details:</strong> All Pending Tasks Should be
+                  Checked fast and Properly. Try to understand the Solution of
+                  Each problem thoroughly.
+                </p>
+                <div class="row mb-3">
+                  <div class="col-6">
+                    <span>
+                      Task Priority :
+                      <span class="badge bg-warning">Medium</span>
+                    </span>
+                  </div>
                   <div class="col-6">
                     Task Status :
                     <span class="badge bg-danger">Pending</span>
                   </div>
-                  <div class="col-6">
-                    <span>
-                      Priority :
-                      <span class="badge bg-success">Low Priority</span>
-                    </span>
-                  </div>
                 </div>
+                <p class="card-text">
+                  <strong>Task Started at:</strong> 09:45p.m(21/02/2022)
+                </p>
+                <p class="card-text">
+                  <strong>Task Ended at:</strong> 10:00a.m(22/02/2022)
+                </p>
               </div>
             </div>
           </div>
