--- a/index.html
+++ b/index.html
@@ -836,9 +836,31 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="viewModalLabel">
-              Task Deadline: 09:45p.m(21/02/2022)
-            </h1>
+            <div class="row">
+              <div class="col-sm-6 col-md-4">
+                <p style="margin-bottom: 0px; margin-top: -5px">
+                  Task Progress
+                </p>
+              </div>
+              <div class="col-sm-6 col-md-8">
+                <div
+                  class="progress"
+                  role="progressbar"
+                  aria-label="Success example"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 270px"
+                >
+                  <div
+                    class="progress-bar progress-bar-striped bg-success"
+                    style="width: 100%"
+                  >
+                    100%
+                  </div>
+                </div>
+              </div>
+            </div>
             <button
               type="button"
               class="btn-close"
